# Bilibili_Box

./: .gitattributes  .gitignore  README.md  bilibili-video-downloader_api_list.md  build-linux.sh  build-macos.sh  build-windows.bat  checklist.md  package-lock.json  package.json  page_funcs.md  quality.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: download-quality-dialog.tsx  login-dialog.tsx
frontend/src/components/layout/: app-shell.tsx  bottom-bar.tsx  sidebar.tsx
frontend/src/hooks/: index.ts  use-card-layout.ts  use-config-watch.ts  use-debounce.ts  use-download-events.ts  use-responsive-page-size.ts
frontend/src/lib/: api.ts  coming-soon.ts  download-feedback.ts  open-external.ts  page-cache.ts  scroll-position.ts  types.ts  utils.ts
frontend/src/stores/: app-store.ts
src-plugin/: Cargo.toml
src-plugin/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  errors.rs  events.rs  lib.rs  main.rs  media_proxy.rs
src-tauri/src/api/: auth.rs  bangumi.rs  client.rs  danmaku.rs  favorite.rs  history.rs  mod.rs  subtitle.rs  video.rs  watchlater.rs  wbi.rs
src-tauri/src/config/: mod.rs
src-tauri/src/danmaku/: ass_converter.rs  canvas.rs  mod.rs  xml_parser.rs
src-tauri/src/download/: chunk.rs  ffmpeg.rs  manager.rs  mod.rs  task.rs
src-tauri/src/download/tasks/: audio_task.rs  cover_task.rs  danmaku_task.rs  json_task.rs  mod.rs  nfo_task.rs  subtitle_task.rs  video_task.rs
src-tauri/src/plugin/: manager.rs  mod.rs
(+10 files in other folders)
