[package]
name = "bilibili-box"
version = "1.0.3"
description = "BiliBox - Bilibili 媒体工作站"
authors = ["BiliBox"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bilibili_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"

# 序列化
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# 日志
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "time", "local-time"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "stream", "default-tls", "system-proxy"] }
reqwest-retry = "0.7"
reqwest-middleware = "0.4"

# 异步运行时
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# 类型安全的 IPC
specta = "=2.0.0-rc.20"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
specta-typescript = "=0.0.7"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 正则表达式
regex = "1"

# 错误处理
anyhow = "1"
thiserror = "1"
eyre = "0.6"

# 路径处理
dirs = "6"

# UUID
uuid = { version = "1", features = ["v4"] }

# 并发控制
parking_lot = "0.12"

# Protocol Buffers (弹幕)
prost = "0.14"
bytes = "1"

# MD5/哈希
md-5 = "0.10"
base64 = "0.22"

# 懒初始化
once_cell = "1"

# URL 编码
serde_urlencoded = "0.7"
url = "2"

# FFmpeg 集成
ffmpeg-sidecar = "1.1"
